Fix ion-fab-button not showing on top in friends page

--- a/src/app/friends/friends.page.scss
+++ b/src/app/friends/friends.page.scss
@@ -4,14 +4,17 @@
 ion-content { background-color: transparent !important; }
 
 .ion-fab {
-    position: relative;
     top: -20px;
-    z-index: 999;
 
     ion-fab-button {
         width: 40px;
         height: 40px;
     }
+}
+
+ion-fab-button {
+    position: relative;
+    z-index: 9999;
 }
 
 
